TEAM_PROJECT.html

--- a/TEAM_PROJECT.html
+++ b/TEAM_PROJECT.html
@@ -34,7 +34,7 @@
          <a href="https://youtube.com/@SecurityAssisters?si=hXWkj09O19ngX_U6"><i class='bx bxl-youtube'></i></a>
          <a href="https://instagram.com/securityassisters?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D"><i
                class='bx bxl-instagram'></i></a>
-         <a href="mailto:shivayecauhaan@gmail.com?subject = Feedback&body = Message"><i class='bx bxl-gmail'></i></a>
+         <a href="mailto:kamalaidi999@gmail.com?subject = Feedback&body = Message"><i class='bx bxl-gmail'></i></a>
       </div>
       <div class="home-content">
          <h1>"Everyone safe on internet is all we wish for"</h1>
@@ -230,7 +230,7 @@
          to all of them in language avilable and it case of emergency you can directly reach us from the bellow
          button.<br>
          WE WISH YOU SAFE SURFING.
-         <br><br><a href="https://wa.me/message/GWUZP2TYVLHVF1?src=qr" class="btn"><i class='bx bxl-whatsapp'></i>Call
+         <br><br><a href="https://Wa.me/+917982282583?src=qr" class="btn"><i class='bx bxl-whatsapp'></i>Call
             us</a>
       </div>
       <div class="home-img">
