--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <header class="header">
-      <a href="#" class="logo">Cyber Security </a>
+      <a href="#" class="logo">SAMADHAN</a>
       <nav class="navbar">
          <ul>
             <li><a href="#">Home</a>
